--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "seed": "node scripts/seed.js"
   },
   "dependencies": {
+    "@azure/msal-browser": "^4.25.1",
+    "@azure/msal-node": "^3.8.0",
+    "@azure/msal-react": "^3.0.20",
+    "@react-oauth/google": "^0.12.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -22,6 +26,8 @@
     "nodemailer": "^7.0.9",
     "pg": "^8.11.3",
     "qrcode": "^1.5.3",
+    "react": "^19.2.0",
+    "react-google-oauth": "^1.0.0",
     "redis": "^4.6.10",
     "socket.io": "^4.6.2",
     "speakeasy": "^2.0.0",
