push smtp settings.

--- a/backend/.env
+++ b/backend/.env
@@ -25,6 +25,12 @@ ENCRYPTION_KEY=your-32-byte-encryption-key-here-change-in-prod
 # Email (configure if you have SendGrid account)
 # SENDGRID_API_KEY=your-sendgrid-key
 # FROM_EMAIL=noreply@medflow.com
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=rajbizchannels@gmail.com
+SMTP_PASS=*Smbz786#
+CLINIC_NAME=MedFlow Clinic
+FRONTEND_URL=http://localhost:3001
 
 # File uploads
 UPLOAD_DIR=C:\\MedFlow\\uploads
