--- a/backend/.env
+++ b/backend/.env
@@ -5,12 +5,12 @@ API_URL=http://localhost:3000
 FRONTEND_URL=http://localhost:3001
 
 # Database
-DATABASE_URL=postgresql://medflow_user:MedFlow2024SecurePass!@localhost:5432/medflow
+#DATABASE_URL=postgresql://postgres:MedFlow2024SecurePass!@localhost:5432/medflow
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=medflow
-DB_USER=medflow_user
-DB_PASSWORD=MedFlow2024SecurePass!
+DB_USER=postgres
+DB_PASSWORD=MedFlow2024!
 
 # Redis
 USE_REDIS=false
