--- a/backend/.env
+++ b/backend/.env
@@ -10,7 +10,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=aureoncare
 DB_USER=postgres
-DB_PASSWORD=AureonCare2024!
+DB_PASSWORD=MedFlow2024!
 
 # Redis
 USE_REDIS=false
